# fontmesher

./: .flake8  .gitignore  README.md  demo.py  demo3d.py  pyproject.toml  requirements.txt
asset/: Font Mesher.msh
fontmesher/: __init__.py  font_pen.py  font_tools.py  font_tools_3d.py  test_3d.py  utils.py
fontmesher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
